--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@ nav ul {
     font-family: "Roboto Mono", Helvetica, sans-serif;
     padding: 0px;
     list-style: none;
-    font-weight: bold;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -19,6 +18,7 @@ a {
 }
 a:hover {
     text-decoration: underline;
+    color: #b0dfe5;
 }
 h1 {
     font-size: 3em;
