--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@ body {
 ul li {
     display: inline;
     margin-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 a {
@@ -31,15 +33,6 @@ p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
 }
 
 img {
