--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,11 @@ nav ul {
     padding-inline-start: 0px;   
 }
 
+nav ul li {
+    display: inline-block;
+}
+
 ul li {
-    display: list-item;
     margin-right: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
